style.css
@import url('https://fonts.googleapis.com/css?family=Oswald|Nova Cut|Roboto+Slab|Raleway|Libre+Baskerville|Poppins');
body{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin: 0;
    font-family: "Poppins",Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    background:linear-gradient(hsl(0,0%,95%) 0%,hsl(0,0%,85%) 100%);
    height:100%;
}

#navbar{
    position: fixed;
    min-width:300px;
    width:300px;
    height:100%;
    border-right: solid;
    border-color: lightslategray;
}

header{
    color: lightslategray;
    margin:10px;
    text-align: center;
    font-size: 20px;
    font-weight: 600;
}

#main-doc header{
    text-align: left;
    margin: 0px;
}

#navbar ul {
    height: 75%;
    padding: 0px;
    overflow-y: auto;
    overflow-x: hidden;
  }
  
  #navbar li {
    color: gray;
    border-top: 1px solid;
    list-style: none;
    position: relative;
    width: 100%;
    margin-bottom: 10px;
  }
  
  #navbar a {
    display: block;
    padding: 12px 40px;
    color: gray;
    text-decoration: none;
    cursor: pointer;
  }
  section li {
    margin: 15px 0px 0px 20px;
  }
  
  #main-doc {
    position: absolute;
    margin-left: 310px;
    padding: 15px;
    margin-bottom: 100px;
  }
  
  code {
    
    display: block;
    text-align: left;
    white-space: pre;
    position: relative;
    word-break: normal;
    word-wrap: normal;
    line-height: 1.5;
    background-color: #f7f7f7;
    padding: 10px;
    margin: 7px;
    font-family: monospace;
    border-left: 5px solid #3d7e9a;
    border-radius: 5px;
    
}
hr {
	margin: 2rem 0rem 2rem 0rem;
	border: 2px solid lightslategray;
}


/** media **/

@media(max-width: 800px) {
    /* For mobile phones: */
    #navbar ul {
      border: 1px solid;
      height: 200px;
    }
  
    #navbar {
      position: absolute;
      top: 0;
      padding: 0;
      margin: 0;
      width: 100%;
      max-height: 300px;
      border: none;
      z-index: 1;
    }
  
    #main-doc {
      position: relative;
      margin-left: 0px;
      margin-top: 270px;
      width:100%;
    }
  }
  @media only screen and (max-width: 400px) {
    #main-doc {
      margin-left: -10px;
    }
  
    code {
      margin-left: -20px;
      width: 100%;
      padding: 15px;
      padding-left: 10px;
      padding-right: 45px;
      min-width: 233px;
    }
  }

